--- a/Application/QRCode/app/src/main/AndroidManifest.xml
+++ b/Application/QRCode/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.hankyul.qrcode">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,6 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.QRCode">
+        <activity
+            android:name=".StatusActivity"
+            android:exported="true" />
         <activity
             android:name=".ScanQR"
             android:exported="true" />
@@ -27,5 +32,5 @@
             android:screenOrientation="fullSensor"
             tools:replace="screenOrientation" />
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
